# auth-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  main.py
app/core/: database.py  dependencies.py  exceptions.py  jwt.py  logging.py  rate_limit.py  security.py
app/models/: client.py  token.py  user.py
app/repositories/: base.py  client.py  token.py  user.py
app/routers/: auth.py  jwks.py
app/schemas/: auth.py
app/services/: auth.py  client.py
tests/: conftest.py  test_auth.py  test_health.py  test_jwt.py  test_rate_limit.py
